spacing fixes

--- a/client/src/css/base.css
+++ b/client/src/css/base.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   background: $color-bg;
+  justify-content: center;
 }
 
 .content-container {
