--- a/client/src/css/panel.css
+++ b/client/src/css/panel.css
@@ -29,6 +29,18 @@
     margin: 10px 0px 20px 0px;
   }
 }
+.SetPasswordPanel{
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  margin: 0 auto;
+
+  .VisavInput{
+    min-width: 250px;
+    width: 100%;
+    margin: 10px 0px 20px 0px;
+  }
+}
 
 .PatientInfoPanel {
   overflow: hidden;
